# sona-mute

./: .gitignore  README.md  chunk_db.sh  compare.py  edgedb.toml  gel.toml  pyproject.toml  sources.yml
dbschema/: default.esdl  default.gel
dbschema/fixups/: m14qfafg4upg67tktn6p3ia3rh26sp2mtdvo7s3f37iknwnhlflp6a-m1ajmneitebkhvqbbqgxipk4mxhf7mkkjuduqte7wsmb6dnpibcvva.edgeql  m1qz7l2rd4x2fyjftixiuamomocmda7l4hulf7obbdriqxojgc7uha-m1y7bkszq4r5c6vfqnt2gdxnfiol6gt7kt7bvvpwz6wjmu3ntyt5xq.edgeql
dbschema/migrations/: 00001-m1ajmne.edgeql  00001-m1ha3y5.edgeql  00001-m1xuyxc.edgeql  00001-m1y7bks.edgeql  00002-m15hhkl.edgeql  00002-m1boop5.edgeql  00002-m1tp4hw.edgeql  00002-m1v65jt.edgeql  00003-m16xolb.edgeql  00003-m1cynfm.edgeql  00003-m1gg5bl.edgeql  00003-m1gxybz.edgeql  00004-m1abl3a.edgeql  00004-m1eahdt.edgeql  00004-m1ifksa.edgeql  00005-m17acxb.edgeql  00005-m1jfm2l.edgeql  00005-m1oobv5.edgeql  00006-m1dnlf6.edgeql  00006-m1kpoey.edgeql  00006-m1y5e5k.edgeql  00007-m1gpk3b.edgeql  00007-m1lji6a.edgeql  00007-m1nkonp.edgeql  00008-m16sxho.edgeql  00008-m1bo7ks.edgeql  00008-m1dyouh.edgeql  00009-m173xmi.edgeql  00009-m1nocyv.edgeql  00009-m1ze2pp.edgeql  00010-m166626.edgeql  00010-m1jokkn.edgeql  00010-m1zk5gm.edgeql  00011-m1axeh7.edgeql  00011-m1n56xc.edgeql  00011-m1xjxgv.edgeql  00012-m1gzwos.edgeql  00012-m1ilp7r.edgeql  00012-m1yms6i.edgeql  00013-m1i5psp.edgeql  (+41 more)
queries/: count_pk_messages.esdl  frequency_by_word.esdl  get_webhook_msg_ids.esdl  ratio_tpt.esdl  sent_len.esdl  sentence_stats_per_author.esdl  sentence_stats_per_community.esdl  sentences_containing_word.esdl  sqlite_freq.sql  sqlite_postprocess.sql  tp_user_sentences_daily.esdl  tpt_sents_by_author.esdl
queries/old-postprocess/: 21-delete-orphan-ranks.sql
queries/postprocess/: 00-validate.sql  10-remove-low-freq.sql  20-create-monthly-index.sql  20-delete-orphan-phrases.sql  20-delete-orphan-terms.sql  21-create-yearly-index.sql  21-delete-orphan-ranks.sql  30-create-freq-index.sql  30-create-monthly-total-index.sql  31-create-ranks-index.sql  31-create-yearly-total-index.sql  32-create-total-index.sql  33-create-phrase-index.sql  33-create-term-index.sql  34-create-phrase-text-index.sql  34-create-term-text-index.sql  40-create-wildcard-index.sql  90-journal-mode.sql  91-page-size.sql  sqlite_postprocess.sql
src/sonamute/: __main__.py  cli.py  constants.py  counters.py  db.py  file_io.py  gen_sqlite.py  ilo.py  misc_tests.py  pluralkit.py  smtypes.py  utils.py
src/sonamute/sources/: discord.py  forum.py  generic.py  poki.py  reddit.py  telegram.py  youtube.py
tests/: profile.py  test_counters.py  test_sqlite.py  test_telegram.py  test_utils.py
