[project]
name = "sonamute"
version = "0.1.0"
description = "Taking Toki Pona statements and turning it into frequency information."
authors = [
    {name = "Gregory Danielson", email = "gregory.danielson3@gmail.com"},
]
dependencies = [
    "sonatoki>=0.1.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}


[tool.pdm]
distribution = false


[tool.isort]
length_sort = "1"
profile = "black"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib = "STL"
import_heading_thirdparty = "PDM"
import_heading_firstparty = "LOCAL"
import_heading_localfolder = "FILESYSTEM"

[tool.pyright]
include = ["src/", "tests/"]
exclude = ["**/__pycache__", "**/__pypackages__", "**/.venv"]
venvPath = "."
venv = ".venv"
executionEnvironments = [{ root = "." }]

[tool.ruff]
line-length = 88
src = ["src"]
